--- a/config.toml
+++ b/config.toml
@@ -28,7 +28,7 @@ link = "https://www.linkedin.com/in/sathashini-s-048943251"
 name = "LinkedIn"
 
 [[params.handles]]
-link = "https://github.com/sathashini4623/"
+link = "https://github.com/SATHASHINI-S"
 name = "GitHub"
 
 [outputs]
