--- a/config.toml
+++ b/config.toml
@@ -8,7 +8,7 @@ PygmentsStyle = "monokai"
 enableGitInfo = false
 
 [params]
-address = "Ariyalur, India"
+address = "chennai, India"
 favicon = "/favicon.ico"
 firstName = "Sathashini"
 lastName = "Saminathan"
