--- a/config.toml
+++ b/config.toml
@@ -15,7 +15,7 @@ lastName = "Saminathan"
 phone = "1-555-555-1234"
 showSocializations = true
 showContact = false
-sections = ["skills","contributions","publications","certificate","creations","experience","education","blog"]
+sections = ["skills","contributions","publications","certifications","creations","experience","education","blog"]
 
 
 [params.google]
